force-app/main/default/objects/TWW_Content__mdt/TWW_Content__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata to store content for Together We Will portal sections</description>
    <label>TWW Content</label>
    <pluralLabel>TWW Contents</pluralLabel>
</CustomObject>