force-app/main/default/objects/TWW_Content__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category for grouping content sections</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>What we do</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>