force-app/main/default/objects/TWW_Content__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description for the content section</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>