force-app/main/default/objects/TWW_Content__mdt/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details for the content section</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>