force-app/main/default/objects/TWW_Content__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Display title for the content section</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>